--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -6,38 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".EditProfileActivity">
 
-    <TextView
-        android:id="@+id/edit_name_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Name"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textSize="20sp"
-        android:layout_marginTop="180dp"
-        android:layout_marginStart="20dp"
-        />
     <EditText
         android:id="@+id/edit_name_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="New name"
-        android:layout_margin="20dp"
-        app:layout_constraintTop_toBottomOf="@id/edit_name_tv"
+        android:layout_marginTop="180dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:background="@drawable/edit_text_custom"
         android:padding="10dp"/>
-    <TextView
-        android:id="@+id/edit_email_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Email"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edit_name_et"
-        android:textSize="20sp"
-        android:layout_marginTop="40dp"
-        android:layout_marginStart="20dp"
-        />
 
     <EditText
         android:id="@+id/edit_email_et"
@@ -45,7 +25,7 @@
         android:layout_height="wrap_content"
         android:hint="New email"
         android:layout_margin="20dp"
-        app:layout_constraintTop_toBottomOf="@id/edit_email_tv"
+        app:layout_constraintTop_toBottomOf="@id/edit_name_et"
         app:layout_constraintStart_toStartOf="parent"
         android:background="@drawable/edit_text_custom"
         android:padding="10dp"/>
